--- a/PixivAss/packages.config
+++ b/PixivAss/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.3.0" targetFramework="net471" />
-  <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net471" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net471" />
+  <package id="Fizzler" version="1.2.0" targetFramework="net471" />
+  <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net471" />
   <package id="System.Data.SQLite" version="1.0.113.1" targetFramework="net471" />
   <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net471" />
   <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net471" />
