--- a/PixivAss/PixivAss.csproj
+++ b/PixivAss/PixivAss.csproj
@@ -96,20 +96,24 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vse.Web.Serialization, Version=1.0.4.0, Culture=neutral, PublicKeyToken=fb838febb49f46b2, processorArchitecture=MSIL">
+      <HintPath>..\packages\Vse.Web.Serialization.ControlledSerializationJsonConverter.1.0.4\lib\net45\Vse.Web.Serialization.dll</HintPath>
+    </Reference>
     <Reference Include="Winista.HtmlParser, Version=1.8.0.0, Culture=neutral">
       <HintPath>..\packages\Winista.HtmlParser.1.8.0\lib\Winista.HtmlParser.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuthorBox.cs">
+    <Compile Include="Control\AuthorBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="AuthorBox.Designer.cs">
+    <Compile Include="Control\AuthorBox.Designer.cs">
       <DependentUpon>AuthorBox.cs</DependentUpon>
     </Compile>
     <Compile Include="BindHandleProvider.cs" />
-    <Compile Include="QueueComboBox.cs" />
-    <Compile Include="TagBox.cs">
+    <Compile Include="Data\Config.cs" />
+    <Compile Include="Control\QueueComboBox.cs" />
+    <Compile Include="Control\TagBox.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Client.cs" />
@@ -118,23 +122,23 @@
     <Compile Include="CookieServer.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Data\IllustGroup.cs" />
-    <Compile Include="Explorer.cs">
+    <Compile Include="Control\Explorer.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="MainWindow.cs">
+    <Compile Include="Control\MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainWindow.Designer.cs">
+    <Compile Include="Control\MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskQueue.cs" />
     <Compile Include="TopLevelException.cs" />
-    <EmbeddedResource Include="AuthorBox.resx">
+    <EmbeddedResource Include="Control\AuthorBox.resx">
       <DependentUpon>AuthorBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainWindow.resx">
+    <EmbeddedResource Include="Control\MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -208,6 +212,7 @@
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.113.1\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.113.1\build\net46\System.Data.SQLite.Core.targets')" />
   <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <PropertyGroup>
-    <PostBuildEvent>echo D|xcopy "$(SolutionDir)aria2" "$(TargetDir)aria2" /y</PostBuildEvent>
+    <PostBuildEvent>echo D|xcopy "$(SolutionDir)aria2" "$(TargetDir)aria2" /y
+echo D|xcopy "$(SolutionDir)config.json" "$(TargetDir)" /y</PostBuildEvent>
   </PropertyGroup>
 </Project>
