--- a/PixivAss/packages.config
+++ b/PixivAss/packages.config
@@ -7,5 +7,6 @@
   <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net471" />
   <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net471" />
   <package id="System.Data.SQLite.Linq" version="1.0.113.0" targetFramework="net471" />
+  <package id="Vse.Web.Serialization.ControlledSerializationJsonConverter" version="1.0.4" targetFramework="net471" />
   <package id="Winista.HtmlParser" version="1.8.0" targetFramework="net471" />
 </packages>
