增加对动图(Ugoria)的支持

--- a/PixivAss/packages.config
+++ b/PixivAss/packages.config
@@ -3,6 +3,12 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net471" />
   <package id="Fizzler" version="1.2.0" targetFramework="net471" />
   <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net471" />
+  <package id="SixLabors.ImageSharp" version="1.0.3" targetFramework="net471" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net471" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net471" />
   <package id="Vse.Web.Serialization.ControlledSerializationJsonConverter" version="1.0.4" targetFramework="net471" />
   <package id="Winista.HtmlParser" version="1.8.0" targetFramework="net471" />
 </packages>
