--- a/PixivAss/packages.config
+++ b/PixivAss/packages.config
@@ -8,6 +8,7 @@
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net471" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net471" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net471" />
+  <package id="morelinq" version="3.3.2" targetFramework="net471" />
   <package id="MySql.Data" version="8.0.28" targetFramework="net471" />
   <package id="SixLabors.ImageSharp" version="1.0.3" targetFramework="net471" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net471" />
@@ -15,6 +16,7 @@
   <package id="System.Memory" version="4.5.4" targetFramework="net471" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net471" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
   <package id="Vse.Web.Serialization.ControlledSerializationJsonConverter" version="1.0.4" targetFramework="net471" />
   <package id="Winista.HtmlParser" version="1.8.0" targetFramework="net471" />
 </packages>
